src/main/webapp/app/exercises/text/assess-new/textblock-feedback-editor/textblock-feedback-editor.component.scss
@import 'src/main/webapp/content/scss/artemis-variables';

:host {
    display: block;
    width: 100%;
}

textarea.form-control,
textarea.form-control:focus,
input.form-control,
input.form-control:focus {
    width: 100%;
    background: rgba(255, 255, 255, 0.5);
}

textarea {
    resize: none;
    overflow-y: scroll;
    overflow-x: hidden;
}

input {
    text-align: right;
}

label {
    font-style: italic;
    width: 100%;
}

.badge {
    float: left;
    margin-top: -2.2vh;
}

